k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warranty-claim-tracker
  namespace: warranty-claim-tracker
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /Warranty-Claim-Tracker
        pathType: Prefix
        backend:
          service:
            name: warranty-claim-tracker
            port:
              number: 80
